--- a/kubernetes/service.yaml
+++ b/kubernetes/service.yaml
@@ -1,12 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: your-next-app-service
+  name: ikuber-nextjs-service
 spec:
   selector:
-    app: your-next-app
+    app: ikuber-nextjs
   ports:
     - protocol: TCP
       port: 80
       targetPort: 3000
   type: LoadBalancer
+  
